<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/type_menu"
        android:title="@string/movie"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/type_movie"
                android:title="@string/movie" />
            <item
                android:id="@+id/type_tv_show"
                android:title="@string/tv_show" />
            <item
                android:id="@+id/type_my_favorite"
                android:title="@string/favorite" />
            <item
                android:id="@+id/type_release_now"
                android:title="@string/release_now"
                android:visible="false" />
        </menu>
    </item>
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search_24px"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom" />
    <item
        android:id="@+id/change_lang"
        android:title="@string/language"
        app:showAsAction="never" />
    <item
        android:id="@+id/setting"
        android:title="@string/setting"
        app:showAsAction="never" />
</menu>